src/app/globals.css
@import 'tailwindcss';

:root {
  --background: #ffffff;
  --foreground: #171717;
  --white: #ffffff;
  --purple-100: #8200ff;
  --purple-200: #5a2d82;
  --gray-90: #ededed;
  --gray-100: #8c8c8c;
  --gray-200: #333333;
  --font-size-1: 12px;
  --font-size-2: 14px;
  --font-size-3: 15px;
  --font-size-4: 18px;
  --font-size-5: 20px;
  --font-color-100: var(--gray-100);
  --font-color-200: var(--gray-200);
  --border-color-100: var(--gray-90);
  --border-color-200: var(--gray-100);

  --header-height: 60px;
  --desk-header-height: 90px;
  --breadcrumb-height: 40px;
  --desk-breadcrumb-height: 70px;
  --logo-height: 25px;
  --desk-logo-height: 30px;
  --desk-content-width: 1130px;
  --content-spacing: 24px;
  --menu-font-color: var(--gray-200);
  --menu-shadow: rgba(0, 0, 0, 0.05);
  --desk-menu-shadow: rgba(0, 0, 0, 0.25);
  --breadcrumb-font-color: var(--purple-200);
  --card-shadow: rgba(0, 0, 0, 0.25);
  --price-font-color: var(--purple-200);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: var(--gray-90);
    --font-color-100: var(--white);
    --font-color-200: var(--gray-90);
    --menu-font-color: var(--gray-90);
    --menu-shadow: rgba(255, 255, 255, 0.1);
    --desk-menu-shadow: rgba(255, 255, 255, 0.25);
    --breadcrumb-font-color: var(--purple-100);
    --price-font-color: var(--purple-100);
  }
}

body {
  background: var(--background);
  color: var(--font-color-200);
}

